--- a/k8s-manifests/nodebb-app-for-redis.yml
+++ b/k8s-manifests/nodebb-app-for-redis.yml
@@ -1,31 +1,15 @@
 ---
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: nodebb-pv
-  namespace: nodebb
-  labels:
-    type: local
-spec:
-  storageClassName: local-path
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/home/nodebb-pv"
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nodebb-pv-claim
+  name: nodebb
   namespace: nodebb
   labels:
     app: nodebb
 spec:
-  storageClassName: local-path
+  storageClassName: openebs-hostpath
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
@@ -42,8 +26,6 @@ spec:
     matchLabels:
       app: nodebb
       tier: frontend
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
@@ -51,20 +33,19 @@ spec:
         tier: frontend
     spec:
       containers:
-        - image: nibrev/nodebb:beta
-          imagePullPolicy: Always
+        - image: nibrev/nodebb:stable
           name: nodebb
           env:
             - name: DATABASE
               value: "redis"
             - name: DB_NAME
-              value: "1"
+              value: "nodebb"
             - name: DB_HOST
-              value: redis
+              value: gitlab-redis-master.gitlab.svc.cluster.local
             - name: DB_PORT
               value: "6379"
             - name: URL
-              value: "http://node.138.201.26.107.nip.io"
+              value: "https://nodebb.roboepics.com"
           ports:
             - containerPort: 4567
               name: nodebb
@@ -74,8 +55,7 @@ spec:
       volumes:
         - name: nodebb-pv
           persistentVolumeClaim:
-            claimName: beta-nodebb-pv-claim
-
+            claimName: nodebb
 ---
 apiVersion: v1
 kind: Service
@@ -91,19 +71,28 @@ spec:
   ports:
     - port: 80
       targetPort: 4567
-
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nodebb
   namespace: nodebb
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    kubernetes.io/tls-acme: "true"
 spec:
   rules:
-    - host: node.138.201.26.107.nip.io
+    - host: nodebb.roboepics.com
       http:
         paths:
           - path: /
+            pathType: ImplementationSpecific
             backend:
-              serviceName: nodebb
-              servicePort: 80
+              service:
+                name: nodebb
+                port:
+                  number: 80
+  tls:
+    - hosts:
+        - nodebb.roboepics.com
+      secretName: roboepics-nodebb-tls
